--- a/css/index.scss
+++ b/css/index.scss
@@ -92,12 +92,14 @@
                         display: block;
                     }
                     p{
+                        width: 80%;
                         font-size: 15px;
                         margin-left: 15px;
                     }
                     .fas{
+                        width: 10%;
                         line-height: 48px;
-                        margin-left: 35px;
+                        margin-left: 30px;
                     }
                    .sub-menu{
                        display: none;
@@ -275,6 +277,12 @@
             }
         }
     }
+    .menu-small{
+        display: none;
+    }
+    .nav-bar{
+        display: none;
+    }
 }
 
 #content{
@@ -348,7 +356,6 @@
     .right{
         width: 30%;
         margin: 50px 0px;
-        position: relative;
         overflow-x: auto;
         .content-section{
             .img-text{      
@@ -379,13 +386,11 @@
                 border-top: 1px solid #ececec;
             }
             .text{
-                position: absolute;
-                top: 14px;
-                left: 128px;
                 background-color: #fff;
                 width: 160px;
                 text-align: center;
                 font-weight: bold;
+                margin: auto;
             }
         }
     }
@@ -491,9 +496,9 @@
         // .center{
         //     margin: 0 15px;
         // }
-        // .left{
-        //     margin-right: 15px;
-        // }
+        .left{
+            margin-left: -16px;
+        }
         // .right{
         //     margin-left: 15px;
         // }
@@ -635,7 +640,6 @@
 @media (min-width: 740px) and (max-width: 1023px){
     #header{
         width:100%;
-        max-width: 768px;
         height: 200px;
         .heading{
             height: 45px;
@@ -683,8 +687,6 @@
                 .notification{
                     padding: 0px 0px;
                     margin-left: 0px;
-                    overflow: visible;
-                    
                     a{
                         img{
                             margin-left: 0px;
@@ -699,9 +701,9 @@
                 .classify-seach{
                     width: 65%;
                     margin-left: 84px;
-                    .search-icon{
-                        .search{
-                            
+                    .classify{
+                        i{
+                            margin-right: 5px;
                         }
                     }
                 }
@@ -726,8 +728,7 @@
         margin-right: 0px;
         margin-left: 0px;
         .left{
-            width: 100%;
-            max-width: 600px;
+            width: 90%;
             margin: auto;
             .heading{
                 .category{
@@ -752,8 +753,7 @@
             }
         }
         .right{
-            width: 100%;
-            max-width: 630px;
+            width: 90%;
             margin: 40px auto;
             .content-section{
                 .img-text{
@@ -766,9 +766,6 @@
                         }
                     }
                 }
-                .text{
-                    left: 250px;
-                }
                 .border-first{
                     padding-top: 20px
                 }
@@ -777,11 +774,10 @@
     }
 
     #document-list{
-        width: 650px;
+        width: 90%;
         margin: auto;
         .title{
             width: 100%;
-            max-width: 617px;
             margin: auto;
             margin-bottom: 40px;
         }
@@ -791,10 +787,19 @@
             margin-left: 0px;
             margin-bottom: 0px;
             width: 100%;
-            max-width: 650px;
             .coll{
                 margin-bottom: 40px;
-                width: 46%;
+                width: 40%;
+                max-width: 300px;
+            }
+            .left{
+                margin-left: -20px;
+            }
+            .right{
+                margin-right: 40px;
+            }
+            .center{
+                margin-left: 18px;
             }
         }
     }
@@ -808,25 +813,23 @@
         .content{
             height: 670px;
             display: block;
-            width: 100%;
+            width: 90%;
+            padding: 45px 10px;
             .left{
-                width: 100%;
-                max-width: 680px;
-                margin-left: 40px;
+                width: 100%;              
+                margin-left: 0px;
             }
             .between{
                 width: 100%;
-                max-width: 680px;
-                margin-left: 30px;
+                margin-left: 0px;
             }
             .right{
                 width: 100%;
-                max-width: 680px;
                 p{
-                    margin-left: 40px;
+                    margin-left: 0px;
                 }
                 img{
-                    margin-left: 40px;
+                    margin-left: 0px;
                 }
             }
         }
@@ -834,7 +837,7 @@
     #sub-footer{
         .container{
             flex-wrap: wrap;
-            width:100%;
+            width: 90%;
             max-width: 760px;
             .copyright{
                 height: 46px;
@@ -843,6 +846,92 @@
             .social{
                 width: 100%;
                 margin-right: 40px;
+            }
+        }
+    }
+}
+@media (max-width: 1240px){
+    #navication{
+        display: block;
+        width: 100%;
+        height: 60px;
+        margin-top: 30px;
+        .menu{
+           display: none;
+        }
+        .nav-bar{
+            display: block;
+            font-size: 30px;
+            line-height: 60px;
+            width: 90%;
+            margin: auto;
+            color: #fff;
+        }
+        .nav-overlay{
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0,0,0,0.3);
+            display: none;
+        }
+        #nav-input{
+            &:checked ~ .nav-overlay{
+                display: block;
+                transition: 0.3s;
+            }
+        }
+        #nav-input{
+            &:checked ~ .menu-small{
+                transform: translateX(0%);
+                transition: 0.3s;
+            }
+        }
+        .menu-small{
+            display: block;
+            position: fixed;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            width: 300px;
+            background-color: #fff;
+            list-style: none;
+            transform: translateX(-100%);
+            a{
+                text-decoration: none;
+                height: 50px;
+                display: block;
+                font-size: 17px;
+                color: #000;
+                padding: 0 10px;
+                .home{
+                    display: flex;
+                    line-height: 50px;
+                    .fas{
+                        line-height: 50px;
+                        margin-right: 10px;
+                    }
+                }
+                .category{
+                    display: flex;
+                    line-height: 50px;
+                    .fas{
+                        line-height: 50px;
+                        margin-right: 10px;
+                    }
+                }
+            }
+            .nav-close{
+                font-size: 30px;
+                margin-left: 10px;
+            }
+        }
+    }
+    #infor-warning{
+        .icon-text{
+            .gray-text{
+                opacity: 1;
             }
         }
     }
@@ -857,7 +946,6 @@
             height: 45px;
             margin: auto;
             width: 100%;
-            max-width: 414px;
             .title{
                 padding: 3px 0;
                 margin: auto;
@@ -912,13 +1000,15 @@
                     margin-left: 40px;
                     p{
                         font-size: 16px;
+                        display: block;
+                        margin-left: 30px;
                     }
                 }
                 .notification{
                     padding: 0px 0px;
                     margin-left: 0px;
                     overflow: visible;
-                    width: 45%;
+                    width: 40%;
                     margin-left: 18px;
                     a{
                         img{
@@ -966,19 +1056,20 @@
         }
     }   
     #navication{
-        display: none;
+        margin-top: 140px;
+        .nav-bar{
+            width: 86%;
+        }
     }
 
     #content{
         display:block;
-        margin-top: 116px;
+        margin-top: 60px;
         width: 100%;
-        max-width: 414px;
         margin-right: 0px;
         margin-left: 0px;
         .left{
-            width: 100%;
-            max-width: 332px;
+            width: 86%;
             margin: auto;
             .heading{
                 margin-bottom: 90px;
@@ -1011,8 +1102,7 @@
             }
         }
         .right{
-            width: 100%;
-            max-width: 340px;
+            width: 86%;
             margin: 40px auto;
             .content-section{
                 .img-text{
@@ -1036,8 +1126,7 @@
     }
 
     #document-list{
-        width: 100%;
-        max-width: 332px;
+        width: 90%;
         margin: auto;
         .title{
             width: 100%;
@@ -1055,14 +1144,25 @@
             width: 100%;
             margin-bottom:  0px;
             .coll{
-                margin-bottom: 40px;
-                width: 100%;
+                width: 85%;
+                max-width: 300px;
+                margin: auto;
+            }
+            .left{
+                margin-bottom: 35px;
+            }
+            .center{
+                margin-bottom: 35px;
+            }
+            .right{
+                margin-bottom: 35px;
             }
         }
     }
     #infor-warning{
         .icon-text{
-            width: 332px;
+            width: 100%;
+            padding: 0 20px;
             span{
                 font-size:13px;
             }
@@ -1074,27 +1174,29 @@
     #footer{
         .content{
             height: 725px;
-            display: block;
+            flex-wrap: wrap;
             font-size: 12px;
             width: 100%;
             .left{
                 width: 100%;
-                margin-left: 10px;
-                max-width: 350px;
+                margin: auto;
+                padding: 0 20px;
             }
             .between{
                 width: 100%;
-                margin-left: 0px;
-                max-width: 350px;
+                padding: 0 20px;
+                
+                margin-left: 0;
             }
             .right{
                 width: 100%;
-                max-width: 350px;
+                max-width: 440px;
+                padding: 0 20px;
                 p{
                     margin-left: 36px;
                 }
                 img{
-                    margin-left: 36px;;
+                    margin-left: 36px;
                 }
             }
         }
@@ -1120,6 +1222,89 @@
                     height: 25px;
                 }
             }
+        }
+    }
+}
+
+@media (min-width: 1023px) and (max-width: 1240px){
+    #header{
+        .heading{
+            width: 100%;
+            .title{
+                width: 90%;
+                .right{
+                    width: 100%;
+                    margin-left: 0;
+                }
+            }
+        }
+        .sub-heading{
+            .container{
+                width: 90%;
+                .infor{
+                    display: none;
+                }
+                .notification{
+                    .img-text{
+                        width: 120px;
+                    }
+                }
+                .classify-seach{
+                    .classify{
+                        width: 50%;
+                    }
+                }
+            }
+        }
+    }
+    #navication{
+        display: block;
+    }
+    #content{
+        width: 90%;
+        .left{
+            width: 60%;
+        }
+        .right{
+            width: 40%;
+        }
+    }
+    #document-list{
+        width: 100%;
+        .title{
+            width: 90%;
+            margin: auto;
+            margin-bottom: 20px;
+        }
+        .row{
+            width: 90%;
+            margin: auto;
+            justify-content: space-between;
+            margin-bottom: 20px;
+            .left{
+                margin-left: -12px;
+            }
+        }
+    }
+    #infor-warning{
+        .icon-text{
+            width: 90%;
+        }
+    }
+    #footer{
+        .content{
+            width: 90%;
+            padding: 16px 0;
+            .right{
+                img{
+                    margin-left: 40px;
+                }
+            }
+        }
+    }
+    #sub-footer{
+        .container{
+            width: 90%;
         }
     }
 }
